# lmnop-panoptic

./: .copier-answers.yml  .envrc  Dockerfile  README.md  README_ROCM.md  install_rocm.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
deepface/commons/: package_utils.py
deepface/models/spoofing/: FasNet.py
docker/: rtsp-entrypoint.sh  rtsp-source.Dockerfile
images/db/: ds_model_vggface_detector_opencv_aligned_normalization_base_expand_0.pkl
lib/deepface/deepface/models/face_detection/: FastMtCnn.py
src/panoptic/: __init__.py
