[project]
name = "panoptic"
version = "0.0.0"
description = "…"
readme = "README.md"
authors = [{name = "Scott Hyndman", email = "scotty.hyndman@gmail.com"}]
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "deepface",
    "fire>=0.4.0",
    "flask>=1.1.2,<=2.0.2",
    "flask-cors>=4.0.1",
    "gdown>=3.10.1",
    "gunicorn>=20.1.0",
    "mtcnn>=0.1.0",
    "numpy==1.26.4",
    "opencv-python>=4.5.5.64",
    "pandas>=0.23.4",
    "pillow>=5.2.0",
    "requests>=2.27.1",
    "retina-face>=0.0.14",
    "tensorflow-rocm",
    "term-image>=0.7.2",
    "tf-keras>=2.18.0",
    "tqdm>=4.30.0",
    "werkzeug<=2.0.2",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]
override-dependencies = ["tensorflow; sys_platform == 'never'"]

[tool.uv.sources]
tensorflow-rocm = {url = "https://repo.radeon.com/rocm/manylinux/rocm-rel-6.4.2/tensorflow_rocm-2.18.1-cp312-cp312-manylinux_2_28_x86_64.whl"}
deepface = { path = "lib/deepface" }

[project.urls]
repository = "https://github.com/shyndman/panoptic"
"Bug Tracker" = "https://github.com/shyndman/panoptic/issues"

[project.scripts]
panoptic = "panoptic:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.pyright]
include = ["src", "tests"]
ignore = ["**/.venv"]
defineConstant = {DEBUG = true}
reportMissingImports = "error"
deprecateTypingAliases = true
reportDeprecated = "information"
pythonPlatform = "Linux"

[tool.ruff]
line-length = 100
target-version = "py311"
indent-width = 2

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["panoptic"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
